Add infinit scroll for loading movies

--- a/src/translation/english_words.json
+++ b/src/translation/english_words.json
@@ -1,4 +1,5 @@
 {
     "watch_later": "Watch Later",
-    "view_trailer": "View Trailer"
+    "view_trailer": "View Trailer",
+    "loading_more": "Loading More..."
 }
