--- a/src/translation/data_words.json
+++ b/src/translation/data_words.json
@@ -1,5 +1,5 @@
 {
     "watch_later": "Watch Later",
     "view_trailer": "View Trailer",
-    "loading_more": "Loading More..."
+    "loading": "Loading..."
 }
