--- a/src/translation/data_words.json
+++ b/src/translation/data_words.json
@@ -9,5 +9,7 @@
     "removeAllStarred": "Remove all starred",
     "emptyList": "Empty list",
     "noWatchLaterMovie": "You have no movies saved to watch later.",
-    "noTrailer": "No trailer available. Try another movie"
+    "noTrailer": "No trailer available. Try another movie",
+    "starredTitle": "Starred Movies",
+    "watchLaterTitle": "Watch Later Movies"
 }
